--- a/package.json
+++ b/package.json
@@ -6,13 +6,19 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "assert": "^1.3.0",
     "body-parser": "~1.12.4",
     "cookie-parser": "~1.3.5",
+    "crypto": "0.0.3",
     "debug": "~2.2.0",
     "express": "~4.12.4",
     "jade": "~1.9.2",
     "morgan": "~1.5.3",
+    "multer": "^0.1.8",
+    "mysql": "^2.9.0",
     "passport": "^0.3.2",
-    "serve-favicon": "~2.2.1"
+    "passport-local": "^1.0.0",
+    "serve-favicon": "~2.2.1",
+    "socket.io": "^1.3.7"
   }
 }
